Loaded dataset directory and Excluded Bullous Class

--- a/Skin_Disease_Detection_Project.ipynb
+++ b/Skin_Disease_Detection_Project.ipynb
@@ -96,45 +96,75 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Explore dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's define the dataset path and explore the folder structure."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train classes: 19\n",
+      "Test classes: 20\n",
+      "Sample classes: ['Acne and Rosacea Photos', 'Actinic Keratosis Basal Cell Carcinoma and other Malignant Lesions', 'Atopic Dermatitis Photos', 'Cellulitis Impetigo and other Bacterial Infections', 'Eczema Photos']\n",
+      "Class in test but not in train: {'Bullous Disease Photos'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define dataset paths\n",
+    "DATASET_DIR = Path(\"datasets/Dataset\")\n",
+    "TRAIN_DIR = DATASET_DIR / \"train\"\n",
+    "TEST_DIR = DATASET_DIR / \"test\"\n",
+    "\n",
+    "# Explore dataset structure\n",
+    "train_classes = sorted([d.name for d in TRAIN_DIR.iterdir() if d.is_dir()])\n",
+    "test_classes = sorted([d.name for d in TEST_DIR.iterdir() if d.is_dir()])\n",
+    "\n",
+    "print(f\"Train classes: {len(train_classes)}\")\n",
+    "print(f\"Test classes: {len(test_classes)}\")\n",
+    "print(\"Sample classes:\", train_classes[:5])\n",
+    "\n",
+    "extra_test_class = set(test_classes) - set(train_classes)\n",
+    "print(\"Class in test but not in train:\", extra_test_class)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We've confirmed that the dataset has 19 training classes and 20 test classes and it is organized into subfolders, one per skin disease category. Our observation is that the test set has 1 more class than the training set.\n",
+    "\n",
+    "We found that the test set contains one additional class Bullous Disease Photos which is not present in the training set. This will lead to a cold start problem, as the model will not have learned to recognize this class. Unless training data for this class is added, we should exclude it from performance evaluation or explicitly note it as a limitation of the dataset."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Classes to exclude \n",
+    "EXCLUDED_CLASSES = {\"Bullous Disease Photos\"}"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
