Obtained Count for images per class

--- a/Skin_Disease_Detection_Project.ipynb
+++ b/Skin_Disease_Detection_Project.ipynb
@@ -165,28 +165,75 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Count Images per Class (Train vs Test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's count the number of .jpg images in each class folder for both train/ and test/ splits as this will help reveal the overall dataset size and the per-class distribution which we will use for class imbalance detection."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                Class  Train Count  \\\n",
+      "0                             Acne and Rosacea Photos          840   \n",
+      "1   Actinic Keratosis Basal Cell Carcinoma and oth...          322   \n",
+      "7        Light Diseases and Disorders of Pigmentation          299   \n",
+      "18         Warts Molluscum and other Viral Infections          248   \n",
+      "14  Tinea Ringworm Candidiasis and other Fungal In...          122   \n",
+      "\n",
+      "    Test Count  Total  \n",
+      "0          231   1071  \n",
+      "1          120    442  \n",
+      "7           30    329  \n",
+      "18          51    299  \n",
+      "14          42    164  \n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_images(folder, excluded_classes=None):\n",
+    "    if excluded_classes is None:\n",
+    "        excluded_classes = set()\n",
+    "    return {\n",
+    "        cls.name: len(list(cls.glob(\"*.jpg\")))\n",
+    "        for cls in folder.iterdir()\n",
+    "        if cls.is_dir() and cls.name not in excluded_classes\n",
+    "    }\n",
+    "\n",
+    "train_counts = count_images(TRAIN_DIR)\n",
+    "test_counts = count_images(TEST_DIR, excluded_classes=EXCLUDED_CLASSES)\n",
+    "\n",
+    "# Combine into DataFrame\n",
+    "df_dist = pd.DataFrame({\n",
+    "    \"Class\": list(train_counts.keys()),\n",
+    "    \"Train Count\": list(train_counts.values()),\n",
+    "    \"Test Count\": [test_counts.get(cls, 0) for cls in train_counts.keys()]\n",
+    "})\n",
+    "df_dist[\"Total\"] = df_dist[\"Train Count\"] + df_dist[\"Test Count\"]\n",
+    "df_dist = df_dist.sort_values(\"Total\", ascending=False)\n",
+    "\n",
+    "print(df_dist.head())"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We've observed that class \"Acne and Rosacea Photos\" has by far the most samples (840 in train, 231 in test). Other classes like “Tinea Ringworm” have significantly fewer images. This confirms a strong class imbalance.\n",
+    "\n",
+    "Models trained on imbalanced datasets tend to become biased toward overrepresented classes which will lead to poor generalization. In medical diagnosis tasks, this can have critical consequences."
+   ]
   },
   {
    "cell_type": "code",
