Identified leaked images between train and test

--- a/Skin_Disease_Detection_Project.ipynb
+++ b/Skin_Disease_Detection_Project.ipynb
@@ -438,32 +438,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Leaked images between train and test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's also ensure no test images are accidentally in training"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leaked images between train and test: 209\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hash_image(image_path):\n",
+    "    try:\n",
+    "        with open(image_path, 'rb') as f:\n",
+    "            return hashlib.md5(f.read()).hexdigest()\n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "def collect_image_hashes(dataset_path):\n",
+    "    hashes = set()\n",
+    "    for cls in dataset_path.iterdir():\n",
+    "        for img in cls.glob(\"*.jpg\"):\n",
+    "            h = hash_image(img)\n",
+    "            if h:\n",
+    "                hashes.add(h)\n",
+    "    return hashes\n",
+    "\n",
+    "train_hashes = collect_image_hashes(TRAIN_DIR)\n",
+    "test_hashes = collect_image_hashes(TEST_DIR)\n",
+    "leaks = train_hashes.intersection(test_hashes)\n",
+    "print(f\"Leaked images between train and test: {len(leaks)}\")"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "There are 209 leaked images between the train and test datasets. This is a critical data quality issue which can significantly inflate the model’s test performance and hurt generalization. Let's resolve this"
+   ]
   },
   {
    "cell_type": "code",
