--- a/Skin_Disease_Detection_Project.ipynb
+++ b/Skin_Disease_Detection_Project.ipynb
@@ -760,43 +760,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are now zero leaked images. Let's create a test checksum to verify the version and ensure reproductibility"
+    "There are now zero leaked images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove corrupted images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's identify and remove corrupted or unreadable image files that may cause issues during training. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Removing Corrupted Images ===\n",
+      "\n",
+      "Removed 0 corrupted train images\n",
+      "Removed 0 corrupted test images\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n=== Removing Corrupted Images ===\")\n",
+    "\n",
+    "def remove_corrupted_images(directory):\n",
+    "    corrupted = []\n",
+    "    for class_dir in Path(directory).iterdir():\n",
+    "        if class_dir.is_dir():\n",
+    "            for img_path in class_dir.glob(\"*.jpg\"):\n",
+    "                try:\n",
+    "                    with Image.open(img_path) as img:\n",
+    "                        img.verify()  \n",
+    "                        img = Image.open(img_path).convert('RGB')  \n",
+    "                        if img.size[0] < 10 or img.size[1] < 10:  \n",
+    "                            raise ValueError(\"Image too small\")\n",
+    "                except (IOError, OSError, ValueError) as e:\n",
+    "                    os.remove(img_path)\n",
+    "                    corrupted.append((img_path, str(e)))\n",
+    "    return corrupted\n",
+    "\n",
+    "train_corrupted = remove_corrupted_images(TRAIN_DIR)\n",
+    "test_corrupted = remove_corrupted_images(TEST_DIR)\n",
+    "\n",
+    "print(f\"\\nRemoved {len(train_corrupted)} corrupted train images\")\n",
+    "print(f\"Removed {len(test_corrupted)} corrupted test images\")\n",
+    "\n",
+    "# Rebuild hashes after corruption removal \n",
+    "train_hashes = collect_image_hashes(TRAIN_DIR)\n",
+    "test_hashes = collect_image_hashes(TEST_DIR)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "There were no corrupted images to remove. But it was a good safety measure"
+   ]
   },
   {
    "cell_type": "code",
