Created test set checksum and obtained updated count of test images

--- a/Skin_Disease_Detection_Project.ipynb
+++ b/Skin_Disease_Detection_Project.ipynb
@@ -832,46 +832,96 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Create test checksum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's create a test checksum to verify the version and ensure reproductibility"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set checksum: bd28148d66132332ce7b7364e271fd26\n"
+     ]
+    }
+   ],
+   "source": [
+    "from hashlib import md5\n",
+    "\n",
+    "def collect_image_hashes(directory):\n",
+    "    hashes = []\n",
+    "    for root, _, files in os.walk(directory):\n",
+    "        for f in sorted(files):\n",
+    "            if f.lower().endswith(('png', 'jpg', 'jpeg')):\n",
+    "                with open(os.path.join(root, f), 'rb') as img_file:\n",
+    "                    img_hash = md5(img_file.read()).hexdigest()\n",
+    "                    hashes.append(img_hash)\n",
+    "    return hashes\n",
+    "\n",
+    "def dataset_checksum(directory):\n",
+    "    all_hashes = sorted(collect_image_hashes(directory))\n",
+    "    return md5(''.join(all_hashes).encode()).hexdigest()\n",
+    "\n",
+    "print(\"Test set checksum:\", dataset_checksum(TEST_DIR))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This represents a unique fingerprint of the current test set image files. Let's show the updated final number of test images per class after removing duplicates and corrupted images"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test counts after leak removal: {'Acne and Rosacea Photos': 33, 'Actinic Keratosis Basal Cell Carcinoma and other Malignant Lesions': 118, 'Atopic Dermatitis Photos': 24, 'Cellulitis Impetigo and other Bacterial Infections': 14, 'Eczema Photos': 2, 'Exanthems and Drug Eruptions': 6, 'Herpes HPV and other STDs Photos': 5, 'Light Diseases and Disorders of Pigmentation': 28, 'Lupus and other Connective Tissue diseases': 24, 'Melanoma Skin Cancer Nevi and Moles': 5, 'Poison Ivy Photos and other Contact Dermatitis': 13, 'Psoriasis pictures Lichen Planus and related diseases': 24, 'Seborrheic Keratoses and other Benign Tumors': 31, 'Systemic Disease': 27, 'Tinea Ringworm Candidiasis and other Fungal Infections': 40, 'Urticaria Hives': 2, 'Vascular Tumors': 36, 'Vasculitis Photos': 1, 'Warts Molluscum and other Viral Infections': 48}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_images(directory, excluded_classes=None):\n",
+    "    counts = {}\n",
+    "    for class_dir in os.listdir(directory):\n",
+    "        if excluded_classes and class_dir in excluded_classes:\n",
+    "            continue\n",
+    "        class_path = os.path.join(directory, class_dir)\n",
+    "        if os.path.isdir(class_path):\n",
+    "            counts[class_dir] = len([\n",
+    "                f for f in os.listdir(class_path) \n",
+    "                if f.lower().endswith(('jpg', 'jpeg', 'png'))\n",
+    "            ])\n",
+    "    return counts\n",
+    "\n",
+    "test_counts = count_images(TEST_DIR, excluded_classes=EXCLUDED_CLASSES)\n",
+    "print(\"Test counts after leak removal:\", test_counts)\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Some classes now have very few test samples such as 'Vasculitis Photos': 1,"
+   ]
   },
   {
    "cell_type": "code",
