--- a/Skin_Disease_Detection_Project.ipynb
+++ b/Skin_Disease_Detection_Project.ipynb
@@ -1050,18 +1050,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Dataset Initialisation"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_dataset = SkinDiseaseDataset(TRAIN_DIR, transform=train_transforms)\n",
+    "test_dataset = SkinDiseaseDataset(TEST_DIR, transform=test_transforms, exclude_classes=EXCLUDED_CLASSES)"
+   ]
   },
   {
    "cell_type": "code",
