Initialized DataLoaders for train and test datasets

--- a/Skin_Disease_Detection_Project.ipynb
+++ b/Skin_Disease_Detection_Project.ipynb
@@ -1190,25 +1190,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## DataLoader Setup"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_loader = DataLoader(train_dataset, batch_size=32, sampler=sampler, num_workers=2)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False, num_workers=2)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "These will handle batching, shuffling, and parallel data loading."
+   ]
   },
   {
    "cell_type": "code",
