Loaded pretrained EfficientNetB0

--- a/Skin_Disease_Detection_Project.ipynb
+++ b/Skin_Disease_Detection_Project.ipynb
@@ -2217,6 +2217,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load pretrained EfficientNetB0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/keras-applications/efficientnetb0_notop.h5\n",
+      "16711680/16705208 [==============================] - 9s 1us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_model = EfficientNetB0(\n",
+    "    weights='imagenet',\n",
+    "    include_top=False,\n",
+    "    input_shape=(224, 224, 3)\n",
+    ")\n",
+    "\n",
+    "# Freeze all layers in the base model\n",
+    "base_model.trainable = False\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
