Added custom classification

--- a/Skin_Disease_Detection_Project.ipynb
+++ b/Skin_Disease_Detection_Project.ipynb
@@ -2249,6 +2249,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add Custom Classification Head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = base_model.output\n",
+    "x = GlobalAveragePooling2D()(x)\n",
+    "x = BatchNormalization()(x)\n",
+    "x = Dropout(0.5)(x)\n",
+    "x = Dense(128, activation='relu')(x)\n",
+    "x = Dropout(0.3)(x)\n",
+    "predictions = Dense(19, activation='softmax')(x)\n",
+    "\n",
+    "# Define the model\n",
+    "model_transfer = Model(inputs=base_model.input, outputs=predictions)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
