Compiled the model

--- a/Skin_Disease_Detection_Project.ipynb
+++ b/Skin_Disease_Detection_Project.ipynb
@@ -2274,6 +2274,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compile the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_transfer.compile(\n",
+    "    optimizer='adam',\n",
+    "    loss='categorical_crossentropy',\n",
+    "    metrics=['accuracy']\n",
+    ")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
