Trained the model

--- a/Skin_Disease_Detection_Project.ipynb
+++ b/Skin_Disease_Detection_Project.ipynb
@@ -2311,6 +2311,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/15\n",
+      "66/66 [==============================] - 111s 2s/step - loss: 3.7661 - accuracy: 0.0569 - val_loss: 2.9641 - val_accuracy: 0.0251\n",
+      "Epoch 2/15\n",
+      "66/66 [==============================] - 109s 2s/step - loss: 3.5598 - accuracy: 0.0564 - val_loss: 2.9637 - val_accuracy: 0.0464\n",
+      "Epoch 3/15\n",
+      "66/66 [==============================] - 109s 2s/step - loss: 3.6760 - accuracy: 0.0540 - val_loss: 2.9621 - val_accuracy: 0.0000e+00\n",
+      "Epoch 4/15\n",
+      "66/66 [==============================] - 108s 2s/step - loss: 3.5213 - accuracy: 0.0440 - val_loss: 2.9630 - val_accuracy: 0.0464\n",
+      "Epoch 5/15\n",
+      "66/66 [==============================] - 108s 2s/step - loss: 3.4696 - accuracy: 0.0483 - val_loss: 2.9762 - val_accuracy: 0.0251\n",
+      "Epoch 6/15\n",
+      "66/66 [==============================] - 108s 2s/step - loss: 3.5180 - accuracy: 0.0421 - val_loss: 2.9826 - val_accuracy: 0.0058\n",
+      "Epoch 7/15\n",
+      "66/66 [==============================] - 109s 2s/step - loss: 3.3848 - accuracy: 0.0368 - val_loss: 3.0004 - val_accuracy: 0.0000e+00\n",
+      "Epoch 8/15\n",
+      "66/66 [==============================] - 108s 2s/step - loss: 3.1709 - accuracy: 0.0430 - val_loss: 2.9991 - val_accuracy: 0.0000e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "history_transfer = model_transfer.fit(\n",
+    "    train_generator,\n",
+    "    validation_data=val_generator,\n",
+    "    epochs=15,\n",
+    "    callbacks=[early_stop, reduce_lr],\n",
+    "    class_weight=class_weights_dict,\n",
+    "    verbose=1\n",
+    ")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
