--- a/Skin_Disease_Detection_Project.ipynb
+++ b/Skin_Disease_Detection_Project.ipynb
@@ -2271,6 +2271,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define callbacks\n",
+    "early_stop = EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)\n",
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=3, min_lr=1e-6)\n",
+    "model_checkpoint = ModelCheckpoint('best_model.h5', save_best_only=True, monitor='val_accuracy')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
