Retrained the model

--- a/Skin_Disease_Detection_Project.ipynb
+++ b/Skin_Disease_Detection_Project.ipynb
@@ -2286,27 +2286,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Add Custom Classification Head"
+    "### Train the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/30\n",
+      "66/66 [==============================] - 114s 2s/step - loss: 3.3235 - accuracy: 0.0425 - val_loss: 2.9376 - val_accuracy: 0.0309\n",
+      "Epoch 2/30\n",
+      "66/66 [==============================] - 109s 2s/step - loss: 3.3178 - accuracy: 0.0598 - val_loss: 2.9423 - val_accuracy: 0.0348\n",
+      "Epoch 3/30\n",
+      "66/66 [==============================] - 109s 2s/step - loss: 3.2992 - accuracy: 0.0545 - val_loss: 2.9437 - val_accuracy: 0.0464\n",
+      "Epoch 4/30\n",
+      "66/66 [==============================] - 110s 2s/step - loss: 3.3195 - accuracy: 0.0392 - val_loss: 2.9363 - val_accuracy: 0.0948\n",
+      "Epoch 5/30\n",
+      "66/66 [==============================] - 109s 2s/step - loss: 3.3483 - accuracy: 0.0387 - val_loss: 2.9328 - val_accuracy: 0.0503\n",
+      "Epoch 6/30\n",
+      "66/66 [==============================] - 112s 2s/step - loss: 3.3372 - accuracy: 0.0473 - val_loss: 2.9176 - val_accuracy: 0.0135\n",
+      "Epoch 7/30\n",
+      "66/66 [==============================] - 111s 2s/step - loss: 3.2674 - accuracy: 0.0540 - val_loss: 2.9345 - val_accuracy: 0.0948\n",
+      "Epoch 8/30\n",
+      "66/66 [==============================] - 109s 2s/step - loss: 3.3874 - accuracy: 0.0449 - val_loss: 2.9271 - val_accuracy: 0.0309\n",
+      "Epoch 9/30\n",
+      "66/66 [==============================] - 112s 2s/step - loss: 3.4490 - accuracy: 0.0502 - val_loss: 2.9546 - val_accuracy: 0.0155\n",
+      "Epoch 10/30\n",
+      "66/66 [==============================] - 111s 2s/step - loss: 3.2176 - accuracy: 0.0497 - val_loss: 2.9376 - val_accuracy: 0.0135\n",
+      "Epoch 11/30\n",
+      "66/66 [==============================] - 110s 2s/step - loss: 3.2584 - accuracy: 0.0550 - val_loss: 2.9299 - val_accuracy: 0.0135\n"
+     ]
+    }
+   ],
    "source": [
-    "from tensorflow.keras import layers, models\n",
-    "\n",
-    "base_model = EfficientNetB0(include_top=False, input_shape=(224, 224, 3), weights='imagenet')\n",
-    "base_model.trainable = False  # freeze base\n",
-    "\n",
-    "model = models.Sequential([\n",
-    "    base_model,\n",
-    "    layers.GlobalAveragePooling2D(),\n",
-    "    layers.Dense(128, activation='relu'),\n",
-    "    layers.Dropout(0.5),\n",
-    "    layers.Dense(19, activation='softmax')  \n",
-    "])\n"
+    "# Train the model\n",
+    "history = efficientnet_model.fit(\n",
+    "    train_generator,\n",
+    "    validation_data=val_generator,\n",
+    "    epochs=30,\n",
+    "    callbacks=[early_stop, reduce_lr, model_checkpoint],\n",
+    "    class_weight=class_weights_dict\n",
+    ")\n"
    ]
   },
   {
